--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,7 @@
 		color: #ffffff;
 	}
 }
+
 // end header
 // start search
 
@@ -93,7 +94,8 @@
 	&-form {
 		max-width: 670px;
 		margin: 0 auto;
-position: relative;
+		position: relative;
+
 		input {
 			display: block;
 			width: 100%;
@@ -105,56 +107,155 @@ position: relative;
 			font-weight: 500;
 			padding-left: 25px;
 			padding-right: 60px;
-			&::placeholder{
+
+			&::placeholder {
 				color: #90a4ae;
 				font-weight: 500;
 			}
 		}
-		button{
+
+		button {
 			position: absolute;
-			border:none;
+			border: none;
 			background-color: transparent;
 			right: 20px;
 			top: 16px;
 		}
 	}
 }
+
 // end search
+
+
 // start products
-.products{
+.products {
 	padding: 110px 0;
 	background-color: $gray;
 }
 
-.products__title{
-	color: $bg;
-}
-.products__inner-btn{
+.products__inner-btn {
 	text-align: center;
 	margin-bottom: 60px;
-	button{
+
+	button {
 		padding: 12px 21px;
 		border: none;
 		background-color: #fff;
 		color: $bg;
-		cursor: pointer
+		cursor: pointer;
+		&.mixitup-control-active {
+			background-color: $red;
+			color: #fff;
+			outline: none;
+			}
 	}
-	& + button{
+
+	&+button {
 		margin-left: 5px;
 	}
+
 }
 
 
+.products__inner-box {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
 
-.products__item{
+.products__item {
 	max-width: 420px;
 	width: 100%;
-	&-img{
-		min-width: 250px;
+	box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+	margin-bottom: 30px;
+
+	&-img {
+		min-height: 250px;
 		background-repeat: no-repeat;
 		display: block;
 		background-position: center;
 		background-size: cover;
+	}
+
+	&-content {
+		display: flex;
+		justify-content: space-between;
+		padding: 10px 30px;
+		align-items: center;
+		min-height: 90px;
+		font-weight: 500;
+		border-bottom: 1px solid #e7ecf2;
+		;
+	}
+
+	&-name {
+		min-width: 310px;
+	}
+
+	&-title {
+		display: block;
+		color: $bg;
+		font-weight: 500;
+		font-size: 18px;
+	}
+
+	&-category {
+		font-size: 14px;
+		color: $green;
+		display: block;
+	}
+
+	&-price {
+		font-size: 20px;
+		color: $bg;
+		font-weight: 700;
+	}
+
+	&-info {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		min-height: 70px;
+		padding: 10px 30px;
+	}
+
+	&-autor {
+		display: flex;
+		align-items: center;
+
+		.avatar {
+			width: 30px;
+			height: 30px;
+			border-radius: 50%;
+			background-position: center;
+			display: inline-block;
+			background-repeat: no-repeat;
+			background-size: cover;
+			margin-right: 14px;
+		}
+
+		span {
+			font-size: 14px;
+			font-weight: 500;
+		}
+	}
+}
+
+.products__bottom-btn {
+	text-align: center;
+
+	button {
+		margin: 45px 5px 0;
+		box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+		border: none;
+		background-color: #fff;
+		color: $bg;
+		padding: 20px 30px;
+		cursor: pointer;
+		&.mixitup-control-active {
+		background-color: $red;
+		color: #fff;
+		}
 	}
 }
 
