--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -38,21 +38,23 @@ body {
 	margin: 0 auto;
 	padding: 0 30px;
 }
-@media (max-width: 720px){
-	.container-fluid{
+@media (max-width: 720px) {
+	.container-fluid {
 		padding: 0 15px;
 	}
 }
-.title{
+.title {
 	text-align: center;
 	color: $bg;
-	font-weight: 700;
+	@include f700;
 	font-size: 36px;
 	line-height: 60px;
 	margin-bottom: 30px;
 }
 
-.rate-star{
+.rate-star {
 	display: inline-block;
 	padding: 13px;
 }
+
+
