--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -78,14 +78,14 @@
 	&-title {
 		margin-bottom: 10px;
 		font-size: 48px;
-		font-weight: 700;
+		@include f700;
 		line-height: 72px;
 	}
 
 	&-text {
 		margin-bottom: 50px;
 		font-size: 20px;
-		font-weight: 500;
+		@include f500;
 		line-height: 30px;
 	}
 
@@ -102,13 +102,13 @@
 			height: 56px;
 			border: none;
 			font-size: 14px;
-			font-weight: 500;
+			@include f500;
 			padding-left: 25px;
 			padding-right: 60px;
 
 			&::placeholder {
 				color: #90a4ae;
-				font-weight: 500;
+				@include f500;
 			}
 		}
 
@@ -178,7 +178,7 @@
 		padding: 10px 30px;
 		align-items: center;
 		min-height: 90px;
-		font-weight: 500;
+		@include f500;
 		border-bottom: 1px solid #e7ecf2;
 	}
 
@@ -189,7 +189,7 @@
 	&-title {
 		display: block;
 		color: $bg;
-		font-weight: 500;
+		@include f500;
 		font-size: 18px;
 	}
 
@@ -202,7 +202,7 @@
 	&-price {
 		font-size: 20px;
 		color: $bg;
-		font-weight: 700;
+		@include f700;
 	}
 
 	&-info {
@@ -231,7 +231,7 @@
 
 		span {
 			font-size: 14px;
-			font-weight: 500;
+			@include f500;
 		}
 	}
 	&-star {
@@ -266,20 +266,19 @@
 	padding: 100px 0 120px;
 }
 
-.slick-dots{
+.slick-dots {
 	text-align: center;
 	margin-top: 50px;
-	li{
-
+	li {
 		display: inline-block;
 		margin-left: 3px;
 		margin-right: 3px;
-		&.slick-active{
-			button{
+		&.slick-active {
+			button {
 				background-color: $green;
 			}
 		}
-		button{
+		button {
 			border-radius: 50%;
 			background-color: rgb(232, 232, 232);
 			font-size: 0;
@@ -289,10 +288,61 @@
 			outline: none;
 			cursor: pointer;
 		}
-	
 	}
-
 }
 
 // end products-slider
+// start advantages
+.advantages {
+	background-color: $bg;
+	padding: 110px;
+}
+.advantages__title {
+	color: #fff;
+}
+.advantages__inner {
+	display: flex;
+	justify-content: space-between;
+}
+.advantages__item {
+	min-width: 370px;
+	text-align: center;
+	padding: 0 15px;
+	transition: all 0.5s;
+	&:hover {
+		.advantages__item-images {
+			background-color: $green;
+		}
+		.advantages__item-title {
+			color: $green;
+		}
+		.advantages__item-images{
+			svg{
+				fill: #fff;
+			}
+		}
+	}
+	&-images {
+		width: 114px;
+		height: 114px;
+		background-color: #fff;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto 30px;
+		transition: all 0.5s;
+	}
+	&-title {
+		margin-bottom: 25px;
+		font-size: 24px;
+		color: #ffffff;
+		@include f500;
+		transition: all 0.5s;
+	}
+	&-text {
+		font-size: 15px;
+	}
+}
 
+// end advantages
