--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -8,8 +8,7 @@
 	font-family: "icomoon";
 	src: url("../fonts/icomoon.eot?afn64k");
 	src: url("../fonts/icomoon.eot?afn64k#iefix") format("embedded-opentype"),
-		url("../fonts/icomoon.ttf?afn64k") format("truetype"), 
-		url("../fonts/icomoon.woff?afn64k") format("woff"),
+		url("../fonts/icomoon.ttf?afn64k") format("truetype"), url("../fonts/icomoon.woff?afn64k") format("woff"),
 		url("../fonts/icomoon.svg?afn64k#icomoon") format("svg");
 	font-weight: normal;
 	font-style: normal;
@@ -32,6 +31,15 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+	content: "\f002";
+}
+.icon-th-large:before {
+	content: "\f009";
+}
+.icon-th-list:before {
+	content: "\f00b";
+}
 .icon-map-marker:before {
 	content: "\f041";
 }
@@ -40,6 +48,12 @@
 }
 .icon-phone:before {
 	content: "\f095";
+}
+.icon-sort:before {
+	content: "\f0dc";
+}
+.icon-unsorted:before {
+	content: "\f0dc";
 }
 .icon-bolt:before {
 	content: "\f0e7";
@@ -52,4 +66,7 @@
 }
 .icon-location-arrow:before {
 	content: "\f124";
+}
+.icon-sort-amount-desc:before {
+	content: "\f161";
 }
