--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -67,7 +67,16 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	min-width: 533px;
+	max-height: 533px;
+	&.page-search {
+		max-height: 230px;
+		.search__inner {
+			padding: 55px 0 70px;
+			&-text {
+				margin-bottom: 20px;
+			}
+		}
+	}
 }
 
 .search__inner {
@@ -183,7 +192,7 @@
 	}
 
 	&-name {
-		min-width: 310px;
+		max-width: 310px;
 	}
 
 	&-title {
@@ -216,10 +225,10 @@
 	&-autor {
 		display: flex;
 		align-items: center;
-		min-width: 245px;
+		max-width: 245px;
 
 		.avatar {
-			width: 30px;
+			min-width: 30px;
 			height: 30px;
 			border-radius: 50%;
 			background-position: center;
@@ -502,7 +511,6 @@
 		}
 	}
 }
-// end footer
 
 .footer__social-link {
 	margin-bottom: 33px;
@@ -577,3 +585,282 @@
 		}
 	}
 }
+// end footer
+// start product-page
+.produck-page__inner {
+	display: flex;
+	padding-bottom: 110px;
+}
+.product-page__aside {
+	margin-right: 30px;
+}
+.aside__item {
+	background-color: #fff;
+	border: 1px solid #dedede;
+	padding: 0 32px 32px;
+	margin-bottom: 30px;
+	width: 270px;
+}
+.aside__title {
+	border-bottom: 1px solid #dde3e8;
+	color: $bg;
+	font-size: 20px;
+	padding: 22px 0 19px;
+	@include f700;
+}
+
+.category__list {
+	padding-top: 10px;
+	li {
+		padding: 10px 0;
+		display: flex;
+		justify-content: space-between;
+		position: relative;
+		padding-left: 20px;
+		&::before {
+			content: "\f105";
+			position: absolute;
+			left: 0;
+			color: $green;
+			font-size: 18px;
+			font-family: "icomoon";
+		}
+	}
+	a {
+		color: $bg;
+	}
+	span {
+		color: #90a4ae;
+		margin-left: 10px;
+	}
+}
+
+.price-range {
+	form {
+		padding-top: 20px;
+		padding-bottom: 25px;
+	}
+	button {
+		margin-top: 55px;
+		padding: 16px 10px;
+		background-color: $green;
+		text-align: center;
+		color: #fff;
+		@include f500;
+		width: 100%;
+		border: none;
+		cursor: pointer;
+		position: relative;
+		&::before {
+			content: "\f002";
+			position: absolute;
+			left: 0;
+			color: #fff;
+			font-size: 15px;
+			font-family: "icomoon";
+			top: 15px;
+			left: 58px;
+		}
+	}
+}
+.irs-min,
+.irs-max {
+	display: none;
+}
+.irs--flat .irs-line {
+	background-color: #f2f5f8;
+	height: 5px;
+}
+.irs--flat .irs-bar {
+	height: 5px;
+	background-color: $bg;
+}
+.irs--flat .irs-handle {
+	width: 16px;
+	height: 16px;
+	border: 4px solid $green;
+	background-color: #fff;
+	border-radius: 50%;
+}
+
+.irs--flat .irs-handle > i:first-child {
+	display: none;
+}
+.irs-from,
+.irs-single,
+.irs-to {
+	top: 45px;
+}
+.irs--flat .irs-from:before,
+.irs--flat .irs-single:before,
+.irs--flat .irs-to:before {
+	display: none;
+}
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+	color: #78909c;
+	font-size: 15px;
+	line-height: 1.333;
+	text-shadow: none;
+	padding: 0;
+	background-color: transparent;
+	border-radius: 0px;
+}
+.irs--flat .irs-handle {
+	top: 20px;
+}
+
+.product-page__aside {
+	.products__item-img {
+		min-height: 120px;
+	}
+	.products__item {
+		box-shadow: none;
+		padding-bottom: 30px;
+		margin-bottom: 30px;
+		border-bottom: 1px solid #dde3e8;
+	}
+
+	.products__item-content {
+		padding: 0;
+		min-height: 75px;
+		border-bottom: none;
+	}
+	.products__item-info {
+		padding: 0;
+		min-width: 0;
+	}
+	.products__item-title {
+		font-size: 16px;
+	}
+	.products__item-price {
+		font-size: 16px;
+	}
+	.products__item-starnum {
+		display: none;
+	}
+	.rate-star {
+		margin-right: 0;
+	}
+	.products__item-autor .avatar {
+		margin-right: 9px;
+	}
+	.jq-ry-container {
+		padding: 0;
+	}
+	.aside__product-item {
+		.products__item:last-child {
+			border: none;
+			padding: 0;
+		}
+		.products__item:first-child {
+			margin-top: 25px;
+		}
+	}
+
+	.top-sellers__link {
+		padding: 16px 10px;
+		display: block;
+		background-color: $green;
+		color: #fff;
+		text-align: center;
+		@include f500;
+	}
+}
+
+.product-page__filter {
+	background-color: #fff;
+	border: 1px solid #dedede;
+	padding: 0 26px;
+	margin-bottom: 30px;
+	height: 60px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	button {
+		cursor: pointer;
+		background-color: transparent;
+		border: none;
+		color: #90a4ae;
+		&.active {
+			color: $green;
+		}
+	}
+}
+
+.product-page__filter-sort {
+	color: #707070;
+	font-size: 14px;
+	display: flex;
+	align-items: center;
+}
+button .icon-sort-amount-desc {
+	font-size: 14px;
+	color: #455a64;
+}
+button .icon-sort {
+	font-size: 18px;
+	color: #707070;
+}
+.product-page__content {
+	width: 100%;
+}
+.product-page__content {
+	.products__item {
+		max-width: 270px;
+		background-color: #fff;
+	}
+	.products__item-img {
+		min-height: 180px;
+	}
+	.products__item-content {
+		padding: 10px 20px;
+		align-items: start;
+	}
+	.products__item-title {
+		font-size: 16px;
+	}
+	.products__item-info {
+		min-height: 65px;
+		padding: 10px 20px;
+	}
+	.rate-star {
+		padding: 0;
+		margin-right: 5px;
+	}
+	.jq-ry-container {
+		padding: 0;
+	}
+}
+.product-page__items {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+}
+.pagination__list {
+	li {
+		display: inline-block;
+		& + li {
+			margin-left: 6px;
+		}
+	}
+	a,
+	span {
+		box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+		width: 43px;
+		height: 48px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: #fff;
+		color: $bg;
+		@include f500;
+		&.active {
+			background-color: $red;
+			color: #fff;
+		}
+	}
+}
+
+// end product-page
