--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -783,6 +783,7 @@
 		background-color: transparent;
 		border: none;
 		color: #90a4ae;
+		outline: none;
 		&.active {
 			color: $green;
 		}
@@ -810,6 +811,7 @@ button .icon-sort {
 	.products__item {
 		max-width: 270px;
 		background-color: #fff;
+		transition: all 0.3s;
 	}
 	.products__item-img {
 		min-height: 180px;
@@ -836,6 +838,7 @@ button .icon-sort {
 .product-page__items {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	margin-bottom: 30px;
 }
 .pagination__list {
@@ -859,6 +862,84 @@ button .icon-sort {
 		&.active {
 			background-color: $red;
 			color: #fff;
+		}
+	}
+}
+.product__item-text {
+	display: none;
+}
+.products__item-price {
+	span {
+		display: none;
+	}
+}
+.products__item-list {
+	display: none;
+	.icon-comment-o,
+	.icon-heart-o {
+		display: inline-block;
+		font-size: 12px;
+		color: #70838b;
+		padding-left: 50px;
+		border-left: 1px solid #aeb4bb;
+		position: relative;
+		span {
+			@include f500;
+			color: $bg;
+		}
+		&::before {
+			font-size: 16px;
+			color: $green;
+			position: absolute;
+			left: 20px;
+			top: 0;
+		}
+	}
+	.icon-comment-o {
+		padding-right: 30px;
+		&::before {
+			top: -2px;
+		}
+	}
+}
+.products__item {
+	&.list {
+		max-width: 100%;
+		.products__item-img {
+			width: 240px;
+			float: left;
+			min-height: 100%;
+		}
+		.product__item-text {
+			display: block;
+			font-size: 14px;
+			color: #70838d;
+			margin-top: 15px;
+			margin-bottom: 5px;
+			@include f500;
+		}
+		.products__item-price {
+			font-size: 30px;
+			span {
+				display: block;
+				font-size: 13px;
+				color: #aeb4bb;
+				@include f500;
+				margin-top: 30px;
+			}
+		}
+		.products__item-name {
+			max-width: 480px;
+		}
+		.products__item-content {
+			padding-top: 23px;
+		}
+		.products__item-list {
+			display: block;
+		}
+		.products__item-star {
+			margin-left: auto;
+			margin-right: 30px;
 		}
 	}
 }
