adedd adaptive header and footer

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,6 +31,7 @@ body {
 	font-size: 15px;
 	line-height: 24px;
 	color: $text;
+	overflow-x: hidden;
 }
 
 .container {
@@ -50,7 +51,7 @@ body {
 	}
 }
 
-.page-content{
+.page-content {
 	background-color: $gray;
 }
 .title {
@@ -96,8 +97,7 @@ body {
 					color: $green;
 				}
 			}
-			&:last-child 
-			a{
+			&:last-child a {
 				color: $bg;
 			}
 		}
@@ -105,5 +105,18 @@ body {
 		a {
 			color: #b0bec5;
 		}
+	}
+}
+
+.angle-right {
+	position: relative;
+	padding-left: 15px;
+	&::before {
+		content: "\f105";
+		font-family: "icomoon";
+		position: absolute;
+		left: 0;
+		color: $green;
+		font-size: 14px;
 	}
 }
