adedd product one part 2, page 404, about

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -319,6 +319,104 @@
 	display: none;
 }
 // end header
+// start modal
+#modal {
+	background-color: $green;
+	max-width: 730px;
+	width: 100%;
+	padding-top: 90px;
+	padding-bottom: 100px;
+}
+.login__title {
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 48px;
+	margin-bottom: 40px;
+	color: #fff;
+	@include f700;
+}
+.login__wrapper {
+	form {
+		max-width: 400px;
+		width: 100%;
+		margin: 0 auto;
+	}
+	label {
+		position: relative;
+		display: block;
+		width: 100%;
+		&::before {
+			position: absolute;
+			font-family: "icomoon";
+			font-size: 14px;
+			color: #fff;
+			left: 18px;
+			top: 9px;
+		}
+	}
+	.login__label-name::before {
+		content: "\f007";
+	}
+	.login__label-pas::before {
+		content: "\f023";
+	}
+	input {
+		height: 43px;
+		margin-bottom: 8px;
+		border: none;
+		background-color: #76ae36;
+		color: #fff;
+		padding-left: 40px;
+		display: block;
+		width: 100%;
+		font-size: 14px;
+		&::placeholder {
+			color: #fff;
+			font-size: 14px;
+		}
+	}
+	button {
+		margin-top: 19px;
+		padding: 18px 0 16px;
+		background-color: #fff;
+		width: 140px;
+		text-transform: uppercase;
+		border: none;
+		margin-right: 10px;
+		@include f700;
+		color: #000;
+		text-align: center;
+		box-shadow: 0px 2px 2px 0px rgba(118, 174, 54, 0.75);
+	}
+}
+.lost-pass {
+	display: block;
+	margin-top: 20px;
+	color: #fff;
+	font-size: 18px;
+}
+
+.create-acc {
+	margin-top: 19px;
+	padding: 14px 0 14px 28px;
+	text-align: center;
+	width: 245px;
+	background-color: #76ae36;
+	color: #fff;
+	font-size: 18px;
+	position: relative;
+	&::before {
+		content: "\f044";
+		position: absolute;
+		left: 35px;
+		top: 15px;
+		font-family: "icomoon";
+	}
+}
+.fancybox-button svg path {
+	color: #fff;
+}
+// end modal
 // start search
 
 .search {
@@ -845,11 +943,10 @@
 	}
 }
 
-
 // end footer
 
 // start product-page
-.produck-page__inner {
+.product-page__inner {
 	display: flex;
 	padding-bottom: 110px;
 }
@@ -1258,7 +1355,6 @@ button .icon-sort {
 .product-one__link {
 	a {
 		color: $gray;
-		height: 50px;
 		padding: 16px 8px;
 		width: 150px;
 		font-size: 14px;
@@ -1356,7 +1452,7 @@ button .icon-sort {
 	font-size: 18px;
 }
 
-.product-one__more{
+.product-one__more {
 	margin-top: 55px;
 }
 .tabs {
@@ -1370,34 +1466,240 @@ button .icon-sort {
 		font-size: 16px;
 		color: #70838d;
 		padding: 20px 0;
-	cursor: pointer;
+		cursor: pointer;
 	}
 }
-.tab_content{
+.tab_content {
 	background-color: #fff;
 	border: 1px solid #d7d7d7;
 	border-top: none;
 	padding: 30px 30px 50px;
 }
-.tab-item{
+.tab-item {
 	display: none;
-	&:first-child{
+	&:first-child {
 		display: block;
 	}
 }
-.tab-items__list{
+.tab-items__list {
 	line-height: 36px;
 	font-size: 16px;
 	color: #707070;
 	column-count: 2;
-column-gap: -100px;
-	li{
+	column-gap: -100px;
+	li {
 		max-width: 270px;
 		width: 100%;
 	}
 }
-
-
+.price__box {
+	display: flex;
+	justify-content: space-between;
+	padding: 30px 0;
+}
+.price__product {
+	font-size: 22px;
+	@include f500;
+	color: $red;
+}
+.product__price {
+	button {
+		margin-bottom: 7px;
+		box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+		border: none;
+		background-color: $text;
+		color: #fff;
+		font-size: 16px;
+		@include f700;
+		font-family: "Roboto", serif !important;
+		font-weight: 700;
+		text-align: center;
+		display: block;
+		padding: 17px 5px;
+		width: 100%;
+		cursor: pointer;
+		&::before {
+			font-weight: 400px;
+			font-family: "icomoon";
+			padding-right: 8px;
+		}
+	}
+	.icon-shopping-cart {
+		background-color: $green;
+	}
+	.icon-heart-o {
+		background-color: #42a5f5;
+	}
+}
+.product__author-box {
+	padding: 25px 0;
+	display: flex;
+}
+.author__avatar {
+	margin-right: 14px;
+}
+.author__name {
+	font-size: 18px;
+	margin-bottom: 2px;
+	color: $bg;
+}
+.author__info-link {
+	font-size: 13px;
+	color: #707070;
+	border: 1px solid #dcdcdc;
+	padding: 6px 9px 5px;
+}
+.author__awards-list {
+	li {
+		display: inline-block;
+		color: #fff;
+		font-size: 20px;
+		text-align: center;
+		position: relative;
+		&::before {
+			position: absolute;
+			top: 6px;
+			left: 0;
+			right: 0;
+		}
+		& + li {
+			margin-left: 4px;
+		}
+	}
+	.icon-meh-o {
+		background-image: url(../images/awards/awards-yellow.png);
+		width: 34px;
+		height: 37px;
+	}
+	.icon-pagelines {
+		background-image: url(../images/awards/awards-red.png);
+		width: 34px;
+		height: 37px;
+	}
+	.icon-bolt {
+		background-image: url(../images/awards/awards-blue.png);
+		width: 34px;
+		height: 37px;
+	}
+	.icon-foursquare {
+		background-image: url(../images/awards/awards-green.png);
+		width: 34px;
+		height: 37px;
+	}
+	.icon-yen {
+		background-image: url(../images/awards/awards-gray.png);
+		width: 34px;
+		height: 37px;
+	}
+}
+.aside__item-sales {
+	padding-top: 23px;
+	font-size: 16px;
+	@include f300;
+	color: #707070;
+	span {
+		font-size: 20px;
+		@include f700;
+		color: #263238;
+		padding-right: 13px;
+		&::before {
+			content: "\f07a";
+			font-family: "icomoon";
+			color: #a6b5bb;
+			padding-right: 20px;
+		}
+	}
+}
+.aside__item .sales-number {
+	padding-bottom: 25px;
+}
+.information__line {
+	font-size: 14px;
+	color: #263238;
+	margin-top: 20px;
+	line-height: 18px;
+	span {
+		color: $bg;
+		@include f500;
+	}
+}
 // end product-one
+// start 404
+
+.page-404__wrapper,
+.about__wrapper {
+	border: 1px solid #dcdcdc;
+	background-color: #fff;
+	margin-bottom: 150px;
+}
+.page-404__head,
+.about__head {
+	font-size: 24px;
+	color: #444;
+	padding: 23px 27px;
+	@include f500;
+	border-bottom: 1px solid #dcdcdc;
+}
+.page-404__inner {
+	text-align: center;
+	background-color: $green;
+	color: #fff;
+}
+.page-404__404 {
+	font-family: "Open Sans", sans-serif;
+	font-size: 300px;
+	font-weight: 800;
+	padding-top: 70px;
+	line-height: 300px;
+	padding-bottom: 20px;
+	position: relative;
+	&::after {
+		position: absolute;
+		content: "";
+		background-image: url(../images/page404.png);
+		width: 150px;
+		height: 292px;
+		margin-left: 20px;
+	}
+}
+.page-404__title {
+	margin-bottom: 30px;
+	@include f300;
+	font-size: 30px;
+}
+.page-404__text {
+	max-width: 501px;
+	margin: 0 auto;
+	margin-bottom: 60px;
+	font-size: 18px;
+	text-align: center;
+}
+.page-404__link {
+	font-size: 14px;
+	text-transform: uppercase;
+	padding: 20px 30px 16px;
+	border: 1px solid #fff;
+	border-radius: 4px;
+	margin-bottom: 100px;
+}
+
+// end 404
+// start about
+.about__inner {
+	padding: 0 50px;
+}
+.about__box {
+	h3 {
+		color: #444;
+		font-size: 20px;
+		@include f700;
+		margin-top: 40px;
+		margin-bottom: 15px;
+	}
+	p{
+		margin-bottom: 40px;
+	}
+}
+// end about
 
 @import "media";
