--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1814,5 +1814,282 @@ button .icon-sort {
 	}
 }
 // end contact
+// start settings
+.settings {
+	padding-bottom: 100px;
+}
+.product-one__tabs.settings__tabs {
+	display: flex;
+	.tabs {
+		max-width: 270px;
+		width: 100%;
+		margin-right: 30px;
+		border: 1px solid #dedede;
+		border-bottom: none;
+		display: block;
+		text-align-last: left;
+		height: 100%;
+		span {
+			display: block;
+			border-bottom: 1px solid #dedede;
+			padding: 17px 17px 17px 50px;
+			color: #707070;
+			font-size: 14px;
+			@include f500;
+			&.active {
+				border-bottom: 1px solid $green;
+				color: #37474f;
+				&::before {
+					color: $green;
+				}
+			}
+			&::before {
+				left: 24px;
+				color: #444;
+			}
+		}
+	}
+	.tab_content {
+		width: 100%;
+		padding: 0;
+		border: none;
+		background-color: transparent;
+	}
+}
+.page-box {
+	width: 100%;
+	background-color: #fff;
+	border: 1px solid #dedede;
+	min-height: 100%;
+}
+.page-box__title {
+	border-bottom: 1px solid #dedede;
+	padding: 18px 34px;
+	font-size: 24px;
+	@include f500;
+	color: $bg;
+}
+.page-box__content {
+	padding: 30px 35px 80px;
+}
+.setting__line {
+	margin-bottom: 21px;
+	display: flex;
+	align-items: center;
+	label {
+		width: 260px;
+		color: #444;
+	}
+	input {
+		max-width: 540px;
+		width: 100%;
+		height: 40px;
+		background-color: #f9f9f9;
+		color: #000;
+		border: 1px solid #dedede;
+		padding: 0 10px;
+	}
+	select {
+		max-width: 540px;
+		width: 100%;
+		height: 40px;
+		background-color: #f9f9f9;
+		color: #707070;
+		border: 1px solid #dedede;
+		padding: 0 10px;
+	}
+}
+// end settings
+// start profile
+.profile__inner {
+	display: flex;
+}
+.profile__aside {
+	margin-right: 30px;
+	max-width: 270px;
+	width: 100%;
+}
+.profile__content {
+	width: 100%;
+}
+
+.profile-status {
+	font-size: 13px;
+	color: #707070;
+	border: 1px solid #dcdcdc;
+	padding: 6px 9px 5px 30px;
+	position: relative;
+	&::before {
+		position: absolute;
+		content: "";
+		left: 11px;
+		top: 13px;
+		width: 9px;
+		height: 9px;
+		border-radius: 50%;
+	}
+}
+.tabs .tab {
+	border: none;
+}
+
+.profile-on {
+	&::before {
+		background-color: $green;
+	}
+}
+.profile-off {
+	&::before {
+		background-color: $red;
+	}
+}
+.profile__aside-btn {
+	margin-bottom: 13px;
+	text-align: center;
+}
+.profile__aside-message {
+	margin-bottom: 17px;
+	display: block;
+	width: 100%;
+	background-color: $text;
+	font-size: 16px;
+	max-width: 270px;
+	color: #fff;
+	@include f500;
+	padding: 18px 10px;
+	position: relative;
+	box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+	&::before {
+		content: "\f003";
+		font-family: "icomoon";
+		position: absolute;
+		left: 50px;
+		top: 17px;
+	}
+}
+.profile__aside-following {
+	margin-bottom: 17px;
+	display: block;
+	width: 100%;
+	background-color: $green;
+	font-size: 16px;
+	max-width: 270px;
+	color: #fff;
+	@include f700;
+	padding: 18px 10px;
+	position: relative;
+	box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+}
+.profile__banner {
+	padding: 20px;
+	border: 1px solid #dedede;
+	background-color: #fff;
+	margin-bottom: 25px;
+}
+.profile__banner-images {
+	background-image: url(../images/content/banner.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 332px;
+}
+.profile__items {
+	display: flex;
+	margin-bottom: 30px;
+	border: 1px solid #dedede;
+}
+.profile__item {
+	width: 25%;
+	background-color: #fff;
+	text-align: center;
+	padding: 20px 0 17px;
+	& + .profile__item {
+		border-left: 1px solid #dedede;
+	}
+}
+.profile__item-title {
+	font-size: 14px;
+	color: $bg;
+	@include f500;
+}
+.profile__item-content {
+	font-size: 14px;
+	color: #707070;
+	@include f500;
+	&.profile__item-sales {
+		color: $bg;
+	}
+}
+.profile-settings {
+	.product-one__tabs.settings__tabs {
+		.tabs span {
+			font-family: "Roboto", sans-serif !important;
+			font-weight: 500;
+			color: #707070;
+			position: relative;
+			&.active::before {
+				color: $green;
+			}
+			&::before {
+				position: absolute;
+				left: 27px;
+				top: 15px;
+				color: #d0d0d0;
+				font-size: 14px;
+				font-family: "icomoon";
+			}
+		}
+	}
+}
+.personal-box {
+	background-color: #fff;
+	padding: 35px 40px 25px;
+	border: 1px solid #dedede;
+}
+
+.personal-box__title {
+	margin-bottom: 25px;
+	@include f700;
+	color: $bg;
+	font-size: 20px;
+}
+.personal-box__text {
+	margin-bottom: 20px;
+	p {
+		margin-bottom: 20px;
+		color: #707070;
+	}
+}
+
+.personal-box__item-head {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 16px;
+}
+.personal-box__item-name {
+	@include f500;
+	font-size: 16px;
+	color: $bg;
+	font-style: italic;
+}
+.personal-box__item-number {
+	@include f700;
+	font-size: 16px;
+	color: $bg;
+}
+.personal-box__item-line {
+	height: 15px;
+	background-color: #f4f4f4;
+	border-radius: 3px;
+	margin-bottom: 23px;
+	span {
+		display: block;
+		border-radius: 3px;
+		height: 15px;
+		background-image: url(../images/pro-bar.jpg);
+		background-repeat: repeat;
+	}
+}
+// end profile
 
 @import "media";
