--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -51,7 +51,13 @@ body {
 		padding: 0 15px;
 	}
 }
-
+.breadcrumbs{
+	&__inner{
+		padding: 45px 0 40px;
+		overflow: hidden;
+		width: 1200px;
+	}
+}
 .page-content {
 	background-color: $gray;
 }
