--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,4 +1,94 @@
+@media (max-width: 1900px) {
+	.product-slider__inner {
+		text-align: center;
+	}
+	.products__item-category {
+		text-align: left;
+	}
+}
+
+@media (max-width: 1440px) {
+	.product-slider__inner {
+		text-align: center;
+	}
+	.products__item {
+		max-width: 560px;
+	}
+}
+
+@media (max-width: 1400px) {
+	.products .products__item {
+		flex-basis: calc(33.3333% - 30px);
+	}
+}
+
+@media (max-width: 1225px) {
+	.product-slider__inner {
+	}
+	.products__item {
+		max-width: 400px;
+	}
+}
+
+@media (max-width: 1200px) {
+	.withdrwals__inner {
+		display: block;
+	}
+	.withdrwals__col {
+		max-width: 100%;
+		margin-bottom: 20px;
+	}
+	.withdrwals__content {
+		button {
+			margin-left: 0;
+		}
+	}
+	.withdrwals__content-item {
+		max-width: 490px;
+	}
+	.contact__form-row {
+		display: block;
+	}
+	.contact__form input {
+		width: 100%;
+	}
+	.productmini {
+		margin-right: 20px;
+	}
+	.product-one__inner {
+		display: block;
+	}
+	.product-one__content {
+		max-width: 100%;
+		margin-right: 0;
+	}
+	.product-one__images {
+		max-width: 100%;
+	}
+	.aside__item {
+		width: 100%;
+	}
+	.product-page__inner {
+		display: block;
+	}
+	.product-page__aside {
+		margin-right: 0px;
+	}
+	.top-sellers {
+		display: none;
+	}
+	.aside__item {
+		width: 100%;
+	}
+	.tutorial__item {
+		padding: 0 5px;
+	}
+}
+
 @media (max-width: 1150px) {
+	.products__item-img {
+		min-height: 225px;
+	}
 	.footer__inner {
 		flex-wrap: wrap;
 	}
@@ -8,6 +98,39 @@
 	}
 	.header__text {
 		display: none;
+	}
+	.products .products__item {
+		flex-basis: calc(50% - 30px);
+		max-width: 100%;
+	}
+}
+
+@media (max-width: 1020px) {
+	.product-one__tabs.settings__tabs {
+		display: block;
+	}
+	.product-one__tabs.settings__tabs .tabs {
+		margin-bottom: 20px;
+		max-width: 100%;
+	}
+	.tutorial__inner {
+		flex-wrap: wrap;
+		margin-left: -20px;
+	}
+	.tutorial__item {
+		padding: 0;
+		margin-left: 20px;
+		max-width: 100%;
+		flex-basis: calc(50% - 20px);
+		margin-bottom: 20px;
+	}
+}
+
+@media (max-width: 960px) {
+	.page-404__404::after {
+		width: 50px;
+		height: 97px;
+		background-size: cover;
 	}
 }
 
@@ -22,6 +145,50 @@
 		& + & {
 			margin-left: 40px;
 		}
+	}
+	.contact__box {
+		display: block;
+	}
+	.profile__inner {
+		flex-direction: column;
+	}
+	.profile__content {
+		order: -1;
+	}
+	.profile__aside {
+		max-width: 100%;
+		.aside__item {
+			width: 100%;
+		}
+	}
+	.product-page__content .products__item {
+		flex-basis: calc(50% - 20px);
+		margin-left: 20px;
+		margin-bottom: 20px;
+	}
+	.product-page__items {
+		margin-left: -20px;
+	}
+	.products__item {
+		&.list {
+			flex-basis: 100%;
+		}
+	}
+	.search__inner-title {
+		font-size: 35px;
+		line-height: 40px;
+	}
+	.product-slider__inner {
+	}
+	.products__item {
+		max-width: 100%;
+	}
+	.advantages__inner {
+		display: block;
+	}
+	.advantages__item {
+		margin-bottom: 30px;
+		max-width: 100%;
 	}
 }
 
@@ -62,14 +229,179 @@
 			}
 		}
 	}
+	.upload-line {
+		display: block;
+		label {
+			display: inline-block;
+			margin-bottom: 5px;
+		}
+	}
+	.upload__inner-content {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.upload__inner-title {
+		padding: 16px 10px 18px;
+	}
+	.upload__inner {
+		button {
+			margin-left: 0;
+		}
+	}
+	.product-one__box {
+		display: block;
+	}
+	.product-one__link {
+		margin-bottom: 20px;
+	}
+	.icon-th-list {
+		display: none;
+	}
+	.author {
+		min-height: 450px;
+	}
 }
+
+@media (max-width: 740px) {
+	.page-404__404 {
+		font-size: 200px;
+		line-height: 200px;
+	}
+	.page-404__title {
+		font-size: 24px;
+		margin-bottom: 20px;
+		line-height: 30px;
+	}
+	.page-404__text {
+		font-size: 15px;
+		margin-bottom: 40px;
+	}
+	.page-404__link {
+		padding: 10px 30px 8px;
+	}
+}
+
+@media (max-width: 700px) {
+	.products .products__item {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+	.author__box {
+		display: block;
+		padding: 50px 15px;
+		text-align: center;
+	}
+	.author__title {
+		margin-right: auto;
+		margin-bottom: 20px;
+		margin-left: auto;
+	}
+}
+
 @media (max-width: 640px) {
 	.notification__box,
 	.massage__box {
 		display: none;
 	}
+	.products__inner-btn button {
+		width: 100%;
+		& + button {
+			margin-left: 0;
+		}
+	}
 	.circle__menu {
 		right: auto;
+	}
+	.page-404__404 {
+		font-size: 120px;
+		line-height: 120px;
+	}
+	.profile__banner-images {
+		min-height: 245px;
+	}
+	.profile__banner {
+		margin-bottom: 20px;
+	}
+	.profile__items {
+		display: block;
+	}
+	.profile__item {
+		width: 100%;
+	}
+	.profile__item + .profile__item {
+		border-left: none;
+		border-top: 1px solid #dedede;
+	}
+	.personal-box {
+		padding: 35px 10px 25px;
+	}
+	.profile__aside-btn {
+		width: 280px;
+	}
+	.product-page__content .products__item {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+	.tutorial__item {
+		flex-basis: 100%;
+	}
+}
+
+@media (max-width: 600px) {
+	.page-404__inner {
+		padding: 0 15px;
+	}
+	.page-404__404::after {
+		content: "";
+		margin-left: 0;
+		top: 16px;
+		right: 0;
+	}
+	.setting__line {
+		display: block;
+		label {
+			display: inline-block;
+			margin-bottom: 5px;
+		}
+	}
+	.page-box__title {
+		padding: 18px 10px;
+	}
+	.contact__inner {
+		padding: 35px 10px 15px;
+	}
+	.contact__head {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.container {
+		padding: 0 8px;
+	}
+	.contact__map iframe {
+		width: 100%;
+		height: 300px;
+	}
+	.product-one__tabs {
+		.tabs {
+			display: block;
+		}
+		.tab {
+			display: block;
+			& + .tab {
+				border-top: 1px solid #d7d7d7;
+			}
+		}
+	}
+	.productmini {
+		min-width: 100%;
+	}
+	.tab-items__list {
+		column-count: 1;
+		column-gap: 0px;
+	}
+	.product-one__link a {
+		width: 100%;
+		margin-bottom: 20px;
 	}
 }
 
@@ -83,7 +415,18 @@
 			margin-top: 30px;
 		}
 	}
+	.withdrwals__content {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.withdrwals__content-item {
+		min-width: 490px;
+	}
+	.withdrwals__content-items {
+		overflow-x: scroll;
+	}
 }
+
 @media (max-width: 520px) {
 	.menu__list {
 		top: 70px;
@@ -140,6 +483,31 @@
 	.circle__menu {
 		top: 53px;
 	}
+	.product-one__images {
+		height: 250px;
+	}
+	.slick-dots li {
+		display: inline-block;
+		margin-left: 2px;
+		margin-right: 2px;
+	}
+	.slick-dots li button {
+		border-radius: 50%;
+		background-color: #e8e8e8;
+		font-size: 0;
+		border: none;
+		width: 13px;
+		height: 13px;
+		outline: none;
+		cursor: pointer;
+	}
+	.create-acc{
+		width: 100%;
+	}
+	.login__wrapper button{
+		margin-right: 0;
+		width: 100%;
+	}
 }
 
 @media (max-width: 495px) {
@@ -151,6 +519,12 @@
 	}
 	.user__box {
 		margin-top: 54px;
+	}
+	.about__head {
+		padding: 23px 10px;
+	}
+	.about__inner {
+		padding: 0 10px;
 	}
 }
 
@@ -164,12 +538,16 @@
 	.basket__box {
 		margin-left: 0;
 	}
+	.fancybox-content{
+		padding: 44px 10px;
+	}
 }
+
 @media (max-width: 360px) {
 	.user {
 		margin-right: 0;
 	}
-	.basket{
+	.basket {
 		margin-right: 0;
 		margin-right: 10px;
 	}
@@ -177,8 +555,7 @@
 		left: -20px;
 	}
 }
-@media (max-width: 320px) {
-}
+
 @media (min-width: 841px) {
 	.menu__list {
 		display: block !important;
